--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -341,10 +341,15 @@ en:
     final:
       title: "Congratulations!"
       site_online: "You've successfully created your mobile site and it's now online!"
+      site_url_header: "Mobile Site URL"
       site_url: "You can see your new mobile site on your smart phone or tablet by browsing to "
+      auto_redirect_header: "Auto-Redirect"
       auto_redirect: If you have a desktop site, <a target="ym-help" href="http://help.yomobi.com/Account/MobileRedirectScript"> learn how to automatically redirect your mobile visitors from your desktop site to your mobile site</a>.
+      easy_update_header: "Easy Site Update"
       easy_update: "Updating your mobile site is easy. All changes you make are automatically published, so your site is always up to date."
+      help_header: "Need Help?"
       help: For additional information, <a target="ym-help" href="http://help.yomobi.com">please visit our help pages.</a>
+      customize_header: "Start Customizing"
       customize: "To start customizing your site, please click the button below."
 
   navigation_bar:
