Added body background image uploading.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -437,6 +437,8 @@ en:
       explanation: "<p>Customize the look and feel of your site.</p>"
       banner: "Banner"
       banner_help: "<p>A banner will override all other header settings.</p>"
+      body_bg: "Body Background Image"
+      body_bg_help: "<p>Upload a background image.</p>"
 
     edit_tab_bar:
       explanation: "Select the pages you want to be most visible to your mobile visitors."
