Added yomobi, linked in, foursquare and google+ icons

--- a/config/locales/widgets/en.icons.yml
+++ b/config/locales/widgets/en.icons.yml
@@ -56,8 +56,12 @@ en:
       keep-me-informed: Keep Me Informed
       leave-a-message: Message
       booking-request: Booking Request
+      yomobi: Yomobi
       facebook: facebook
       twitter: twitter
+      linkedin: Linkedin
+      foursquare: foursquare
+      googleplus: Google+
       share: Share
       tell-a-friend: Tell A Friend
       reviews: Reviews
