--- a/config/locales/widgets/es.icons.yml
+++ b/config/locales/widgets/es.icons.yml
@@ -56,8 +56,12 @@ es:
       keep-me-informed: Mantenerme Informado
       leave-a-message: Mensaje
       booking-request: Reservas
+      yomobi: Yomobi
       facebook: facebook
       twitter: twitter
+      linkedin: Linkedin
+      foursquare: foursquare
+      googleplus: Google+
       share: Compartir
       tell-a-friend: Comentar Con Amigos
       reviews: Críticas
