Fixes typo in es.names.yml

--- a/config/locales/widgets/es.names.yml
+++ b/config/locales/widgets/es.names.yml
@@ -21,7 +21,7 @@ es:
       menu: "Menú"
       products: "Productos / Servicios"
       property-listings: "Avisos de Inmuebles"
-      reviews: "Crticas"
+      reviews: "Criticas"
       rss-feed: "Suscripción RSS"
       tell-a-friend: "Comentar con Amigos"
       twitter: "Twitter"
