--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -457,6 +457,7 @@ en:
       add_item: "Add %{item}"
       add_rss: "Add RSS"
       address1_label_required: "Address 1*:"
+      address1_label: "Address 1:"
       address2_label: "Address 2:"
       browse: "Browse..."
       calendar_link_label: "Paste your calendar link here:"
