Updated home page to include plans and business opportunities pages and CSS

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,8 @@ en:
     help: "Help"
     home: "Home"
     mobile_matters: "Mobile Matters"
+    plans: Plans
+    opportunities: Opportunities
     privacy: "Privacy"
     terms: "Terms"
 
