--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -55,6 +55,8 @@ es:
     help: "Ayuda"
     home: "Inicio"
     mobile_matters: "La Movilidad Importa"
+    plans: Planes
+    opportunities: Oportunidades
     privacy: "Privacidad"
     terms: "Términos"
 
