Site manager: Require a domain to remove. Closes #262

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -124,6 +124,7 @@ en:
       concede_ownership_dialog_title: "Concede Site Ownership"
       add: "Add"
       continue: "Continue"
+      select_domain: "Please select a domain"
 
 
   javascript_mobile:
