Added confirmation to subscription cancel.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,7 @@ en:
       add: "Add"
       continue: "Continue"
       select_domain: "Please select a domain"
+      cancel_sub_confirm: "Are you sure you want to cancel your subscription?"
 
 
   javascript_mobile:
