Payment process UI updates. Closes #278

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,6 +133,7 @@ en:
       upgrade: "Upgrade"
       professional: "Professional"
       standard: "Standard"
+      agree_to_terms: "Please agree to the terms before continuing."
 
 
   javascript_mobile:
@@ -655,6 +656,7 @@ en:
     subscription_status: "You are on a monthly subscription until {{ subscriptionEndDate }}"
     cancel_subscription: "Cancel Subscription"
     cancel_success: "Monthly subscription cancelled sucessfully."
+    payment_complete: "Site successfully upgraded."
 
     setup: "Setup"
     custom_domains: "Custom Domains"
