--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -453,21 +453,23 @@ en:
       explanation: "<p>Customize the look and feel of your site.</p>"
       banner: "Banner"
       banner_help: "<p>A banner will override all other header settings.</p>"
-      body_bg: "Body Background Image"
+      body_bg: "Wallpaper"
       body_bg_help: "<p>Upload a background image.</p>"
       not_premium: "You must upgrade this site to Professional to use this feature."
 
+      customizing_header: "Customizing Header"
       header: "Header"
-      header_font: "Header Font"
+      header_font: "Font"
 
       banner_size: "Banner Size"
       text_color: "Text Color"
       background_color: "Background Color"
+      font: "Font"
 
       tab_bar_and_footer: "Mobile Tab Bar & Footer"
       customizing_tab_bar_and_footer: "Customizing Tab Bar & Footer"
-      icon_text_font: "Icon Text Font"
-      icon_text_color: "Icon Text Color"
+      icon_text_font: "Font"
+      icon_text_color: "Text Color"
 
       home_page: "Home Page"
       customizing_home_page: "Customizing Home Page"
