--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -666,6 +666,11 @@ es:
     site_admins: "@@Site Admins"
     site_admins_status: "@@This site has <b>%{admin_count}</b> admin(s)."
 
+    months: "@@Months"
+    monthly: "@@Monthly"
+    year: "@@Year"
+    upgrade_payment: "@@Professional Site Payment"
+
     # site_manager
     error:
       are_you_sure: "¿Estás seguro(a)?"
