--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -660,6 +660,7 @@ es:
     custom_domains: "@@Custom Domains"
     connected_domains: "@@%{domain_count} Connected Domains"
     not_premium_for_domains: "@@This site must be upgraded to <b>Professional</b> to use Custom Domains."
+    no_domains_connected: "@@No domains connected to this site."
 
     merchant_account: "@@Merchant Account"
     no_merchant_account: "@@You have not set up your merchant account."
