Updated payment options. Addresses #292

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -687,6 +687,7 @@ en:
     months: "Months"
     monthly: "Monthly"
     year: "Year"
+    yearly: "Yearly"
     upgrade_payment: "Professional Site Payment"
 
     # site_manager
