--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,12 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  powered_by:
+    slogan: "Powered by YoMobi"
+
+  share:
+    share: "Share:"
+
   date_formats:
     payment: "%B %d, %Y"
 
